# libarchive

./: .gitattributes  .gitignore  .hlint.yaml  .stylish-haskell.yaml  .travis.yml  CHANGELOG.md  Makefile  README.md  Setup.hs  TODO.md  Vagrantfile  cabal.project  cabal.project.local  configure.ac  gen-c-files.sh  github-action.dhall  hlint-ci.dhall  libarchive.cabal  stack.yaml
.github/scripts/: brew.sh
.github/workflows/: haskell.yml  hlint.yml
bash/: bench  build  cross  display  docs  haddocks  repl  setup  test
bench/: Bench.hs
c/autoconf-darwin/: config.h
c/autoconf-freebsd/: config.h
c/autoconf-linux/: config.h
c/autoconf-windows/: config.h
c/patches/: 0001-Add-missing-ifdef-to-unbreak-build-withot-lzma.patch
cbits/: unpack.c
libarchive/: CHANGELOG.md  Makefile  hie.yaml  libarchive.cabal
libarchive-clib/: configure  configure.ac  gen-c-files.sh  libarchive-clib.cabal  update-autotools-files.sh
libarchive-clib/c/: config.h.in
libarchive/bash/: display
libarchive/bench/: Bench.hs
libarchive/exe/: Main.hs
libarchive/mem/: Mem.hs
libarchive/src/Codec/: Archive.hs
libarchive/src/Codec/Archive/: Types.cpphs
libarchive/src/Codec/Archive/Foreign/: Archive.chs
libarchive/src/Codec/Archive/Foreign/Archive/: Macros.chs
libarchive/src/Codec/Archive/Internal/: Monad.hs  Pack.hs
libarchive/src/Codec/Archive/Internal/Unpack/: Lazy.hs
libarchive/src/Codec/Archive/Types/: Foreign.chs
libarchive/test/Codec/Archive/: Test.hs
mem/: Mem.hs
src/Codec/: Archive.hs
src/Codec/Archive/: Common.hs  Foreign.chs  Foreign.hs  Monad.hs  Pack.hs  Permissions.hs  Types.cpphs  Types.hs  Unpack.hs
src/Codec/Archive/Foreign/: Archive.chs  Archive.hs  ArchiveEntry.chs  ArchiveEntry.hs  Common.hs  Raw.hs
src/Codec/Archive/Foreign/Archive/: Macros.chs  Raw.hs
src/Codec/Archive/Foreign/ArchiveEntry/: Macros.chs  Raw.hs
src/Codec/Archive/Internal/: Common.hs  Monad.hs  Pack.hs  Permissions.hs  Types.hs  Unpack.hs
src/Codec/Archive/Internal/Foreign/Archive/: Macros.chs
src/Codec/Archive/Internal/Foreign/ArchiveEntry/: Macros.chs
src/Codec/Archive/Internal/Pack/: Common.hs  Lazy.hs
src/Codec/Archive/Internal/Types/: Foreign.chs
src/Codec/Archive/Internal/Unpack/: Lazy.hs
src/Codec/Archive/Pack/: Common.hs  Lazy.hs
src/Codec/Archive/Types/: Foreign.chs  Foreign.hs
src/Codec/Archive/Unpack/: Lazy.hs
test/: Spec.cpphs  Spec.hs
test/Codec/Archive/: Roundtrip.hs  Test.hs
test/data/: libarchive-0.2.1.2.tar
zlib-clib/: gen-c-files.sh  zlib-clib.cabal
