cabal-version:      2.0
name:               libarchive-clib
version:            3.7.2
license:            OtherLicense
license-file:       LICENSE
copyright:          Copyright: (c) 2018-2020 Vanessa McHale
maintainer:         vamchale@gmail.com
author:             Vanessa McHale

bug-reports:        https://github.com/vmchale/libarchive/issues
synopsis:           Haskell interface to libarchive (C sources)
description:
    Bundled libarchive C sources for use with the libarchive Haskell bindings.

category:           Codec
build-type:         Configure
extra-source-files:
    ./c/*.c
    ./c/*.h
    ./c/config.h.in
    ./build/autoconf/config.guess
    ./build/autoconf/config.sub
    ./build/autoconf/install-sh
    ./build/autoconf/ltmain.sh
    configure
    configure.ac

source-repository head
    type:     git
    location: https://github.com/vmchale/libarchive

library
    default-language: Haskell2010
    if os(windows)
        cc-options: -U__GCC_ASM_FLAG_OUTPUTS__

    if arch(i386)
        cc-options: -D_Alignas(t)=__attribute__((__aligned__(t)))

    cc-options:   -std=c11 -DHAVE_CONFIG_H
    include-dirs: c
    build-depends: zlib-clib
    c-sources:
        ./c/archive_acl.c
        ./c/archive_blake2sp_ref.c
        ./c/archive_blake2s_ref.c
        ./c/archive_check_magic.c
        ./c/archive_cmdline.c
        ./c/archive_cryptor.c
        ./c/archive_digest.c
        ./c/archive_disk_acl_darwin.c
        ./c/archive_disk_acl_freebsd.c
        ./c/archive_disk_acl_linux.c
        ./c/archive_disk_acl_sunos.c
        ./c/archive_entry.c
        ./c/archive_entry_copy_bhfi.c
        ./c/archive_entry_copy_stat.c
        ./c/archive_entry_link_resolver.c
        ./c/archive_entry_sparse.c
        ./c/archive_entry_stat.c
        ./c/archive_entry_strmode.c
        ./c/archive_entry_xattr.c
        ./c/archive_getdate.c
        ./c/archive_hmac.c
        ./c/archive_match.c
        ./c/archive_options.c
        ./c/archive_pack_dev.c
        ./c/archive_pathmatch.c
        ./c/archive_ppmd7.c
        ./c/archive_ppmd8.c
        ./c/archive_random.c
        ./c/archive_rb.c
        ./c/archive_read_add_passphrase.c
        ./c/archive_read_append_filter.c
        ./c/archive_read.c
        ./c/archive_read_data_into_fd.c
        ./c/archive_read_disk_entry_from_file.c
        ./c/archive_read_disk_posix.c
        ./c/archive_read_disk_set_standard_lookup.c
        ./c/archive_read_disk_windows.c
        ./c/archive_read_extract2.c
        ./c/archive_read_extract.c
        ./c/archive_read_open_fd.c
        ./c/archive_read_open_file.c
        ./c/archive_read_open_filename.c
        ./c/archive_read_open_memory.c
        ./c/archive_read_set_format.c
        ./c/archive_read_set_options.c
        ./c/archive_read_support_filter_all.c
        ./c/archive_read_support_filter_by_code.c
        ./c/archive_read_support_filter_bzip2.c
        ./c/archive_read_support_filter_compress.c
        ./c/archive_read_support_filter_grzip.c
        ./c/archive_read_support_filter_gzip.c
        ./c/archive_read_support_filter_lrzip.c
        ./c/archive_read_support_filter_lz4.c
        ./c/archive_read_support_filter_lzop.c
        ./c/archive_read_support_filter_none.c
        ./c/archive_read_support_filter_program.c
        ./c/archive_read_support_filter_rpm.c
        ./c/archive_read_support_filter_uu.c
        ./c/archive_read_support_filter_xz.c
        ./c/archive_read_support_filter_zstd.c
        ./c/archive_read_support_format_7zip.c
        ./c/archive_read_support_format_all.c
        ./c/archive_read_support_format_ar.c
        ./c/archive_read_support_format_by_code.c
        ./c/archive_read_support_format_cab.c
        ./c/archive_read_support_format_cpio.c
        ./c/archive_read_support_format_empty.c
        ./c/archive_read_support_format_iso9660.c
        ./c/archive_read_support_format_lha.c
        ./c/archive_read_support_format_mtree.c
        ./c/archive_read_support_format_rar5.c
        ./c/archive_read_support_format_rar.c
        ./c/archive_read_support_format_raw.c
        ./c/archive_read_support_format_tar.c
        ./c/archive_read_support_format_warc.c
        ./c/archive_read_support_format_xar.c
        ./c/archive_read_support_format_zip.c
        ./c/archive_string.c
        ./c/archive_string_sprintf.c
        ./c/archive_util.c
        ./c/archive_version_details.c
        ./c/archive_virtual.c
        ./c/archive_windows.c
        ./c/archive_write_add_filter_b64encode.c
        ./c/archive_write_add_filter_by_name.c
        ./c/archive_write_add_filter_bzip2.c
        ./c/archive_write_add_filter.c
        ./c/archive_write_add_filter_compress.c
        ./c/archive_write_add_filter_grzip.c
        ./c/archive_write_add_filter_gzip.c
        ./c/archive_write_add_filter_lrzip.c
        ./c/archive_write_add_filter_lz4.c
        ./c/archive_write_add_filter_lzop.c
        ./c/archive_write_add_filter_none.c
        ./c/archive_write_add_filter_program.c
        ./c/archive_write_add_filter_uuencode.c
        ./c/archive_write_add_filter_xz.c
        ./c/archive_write_add_filter_zstd.c
        ./c/archive_write.c
        ./c/archive_write_disk_posix.c
        ./c/archive_write_disk_set_standard_lookup.c
        ./c/archive_write_disk_windows.c
        ./c/archive_write_open_fd.c
        ./c/archive_write_open_file.c
        ./c/archive_write_open_filename.c
        ./c/archive_write_open_memory.c
        ./c/archive_write_set_format_7zip.c
        ./c/archive_write_set_format_ar.c
        ./c/archive_write_set_format_by_name.c
        ./c/archive_write_set_format.c
        ./c/archive_write_set_format_cpio.c
        ./c/archive_write_set_format_cpio_binary.c
        ./c/archive_write_set_format_cpio_newc.c
        ./c/archive_write_set_format_cpio_odc.c
        ./c/archive_write_set_format_filter_by_ext.c
        ./c/archive_write_set_format_gnutar.c
        ./c/archive_write_set_format_iso9660.c
        ./c/archive_write_set_format_mtree.c
        ./c/archive_write_set_format_pax.c
        ./c/archive_write_set_format_raw.c
        ./c/archive_write_set_format_shar.c
        ./c/archive_write_set_format_ustar.c
        ./c/archive_write_set_format_v7tar.c
        ./c/archive_write_set_format_warc.c
        ./c/archive_write_set_format_xar.c
        ./c/archive_write_set_format_zip.c
        ./c/archive_write_set_options.c
        ./c/archive_write_set_passphrase.c
        ./c/filter_fork_posix.c
        ./c/filter_fork_windows.c
        ./c/xxhash.c

    install-includes:
        archive.h
        archive_entry.h

    include-dirs: c/

