cabal-version:      2.0
name:               zlib-clib
version:            1.3
license:            OtherLicense
license-file:       LICENSE
copyright:          Copyright: (c) 2018-2020 Vanessa McHale
maintainer:         vamchale@gmail.com
author:             Vanessa McHale

bug-reports:        https://github.com/vmchale/libarchive/issues
synopsis:           Zlib c sources (bundled)
description:
    Bundled zlib C sources for use with the libarchive Haskell bindings.

category:           Codec
build-type:         Simple
extra-source-files:
    ./c/*.c
    ./c/*.h

source-repository head
    type:     git
    location: https://github.com/vmchale/libarchive

library
    default-language: Haskell2010
    if os(windows)
        cc-options: -U__GCC_ASM_FLAG_OUTPUTS__

    if arch(i386)
        cc-options: -D_Alignas(t)=__attribute__((__aligned__(t)))

    include-dirs: c
    c-sources:
        ./c/adler32.c
        ./c/crc32.c
        ./c/deflate.c
        ./c/inffast.c
        ./c/zutil.c
        ./c/compress.c
        ./c/infback.c
        ./c/inflate.c
        ./c/inftrees.c
        ./c/trees.c
        ./c/uncompr.c

